CSS Classes: Utility classes #823

--- a/pages/sample/css-utility-css-classes.html
+++ b/pages/sample/css-utility-css-classes.html
@@ -71,15 +71,15 @@ permalink: "get-started/css-classes-shortcuts/utility-css-classes.html"
 
        <tr>
         <td><code>.brd-gray</code></td>
-        <td>grey border color (#555)</td>
+        <td>gray border color (#555)</td>
        </tr>
        <tr>
         <td><code>.brd-gray-light</code></td>
-        <td>light grey border color (#ddd)</td>
+        <td>light gray border color (#ddd)</td>
        </tr>
        <tr>
         <td><code>.brd-gray-dark</code></td>
-        <td>dark grey border color (#222)</td>
+        <td>dark gray border color (#222)</td>
        </tr>
 
        <tr>
@@ -88,33 +88,33 @@ permalink: "get-started/css-classes-shortcuts/utility-css-classes.html"
        </tr>
        <tr>
         <td><code>.brd-white-before</code></td>
-        <td>adds white border to something before the content of each selected element(s).
+        <td>adds white border before the content of each selected element(s).
         </td>
        </tr>
        <tr>
         <td><code>.brd-white-after</code></td>
-        <td>adds white border to something after the content of each selected element(s).
+        <td>adds white border after the content of each selected element(s).
         </td>
        </tr>
        <tr>
         <td><code>.brd-gray-light-before</code></td>
-        <td>adds light grey to something before the content of each selected element(s).
+        <td>adds light gray before the content of each selected element(s).
         </td>
        </tr>
        <tr>
         <td><code>.brd-gray-light-after</code></td>
-        <td>adds light grey border to something after the content of each selected
+        <td>adds light gray border after the content of each selected
          element(s).</td>
        </tr>
        <tr>
         <td><code>.brd-transparent-before</code></td>
-        <td>transparent border to something before the content of each selected element(s).
+        <td>transparent border before the content of each selected element(s).
         </td>
        </tr>
 
        <tr>
         <td><code>.brd-transparent-after</code></td>
-        <td>transparent border to something after the content of each selected element(s).
+        <td>transparent border after the content of each selected element(s).
         </td>
        </tr>
        <tr>
@@ -177,7 +177,7 @@ permalink: "get-started/css-classes-shortcuts/utility-css-classes.html"
 
   <cagov-accordion>
    <details>
-    <summary>Colors and Backgrounds</summary>
+    <summary>Colors and backgrounds</summary>
     <div class="accordion-body">
      <table class="table table-striped">
       <thead>
@@ -257,20 +257,20 @@ permalink: "get-started/css-classes-shortcuts/utility-css-classes.html"
        </tr>
 
        <tr>
-        <td><code>.bg-grey-light</code></td>
-        <td>light grey background color (#eee)</td>
+        <td><code>.bg-gray-light</code></td>
+        <td>light gray background color (#eee)</td>
        </tr>
        <tr>
-        <td><code>.bg-grey-light-hover</code></td>
-        <td>light grey background color (#eee) that shows up on hover</td>
+        <td><code>.bg-gray-light-hover</code></td>
+        <td>light gray background color (#eee) that shows up on hover</td>
        </tr>
        <tr>
-        <td><code>.bg-grey-lightest</code></td>
-        <td>lightest grey background color (#f5f5f5)</td>
+        <td><code>.bg-gray-lightest</code></td>
+        <td>lightest gray background color (#f5f5f5)</td>
        </tr>
        <tr>
-        <td><code>.bg-grey-lightest-hover</code></td>
-        <td>lightest grey background color (#f5f5f5) that shows up on hover</td>
+        <td><code>.bg-gray-lightest-hover</code></td>
+        <td>lightest gray background color (#f5f5f5) that shows up on hover</td>
        </tr>
 
        <tr>
@@ -404,12 +404,12 @@ permalink: "get-started/css-classes-shortcuts/utility-css-classes.html"
         <td>info color (#1C7DB5) and success color (#32852E) linear gradient background</td>
        </tr>
        <tr>
-        <td><code>.bg-grey-radialgradient</code></td>
-        <td>light grey color radial gradient background</td>
+        <td><code>.bg-gray-radialgradient</code></td>
+        <td>light gray color radial gradient background</td>
        </tr>
        <tr>
-        <td><code>.bg-greylight-radialgradient</code></td>
-        <td>lightest grey color radial gradient background</td>
+        <td><code>.bg-graylight-radialgradient</code></td>
+        <td>lightest gray color radial gradient background</td>
        </tr>
        <tr>
         <td><code>.bg-primary-radialgradient</code></td>
@@ -420,8 +420,8 @@ permalink: "get-started/css-classes-shortcuts/utility-css-classes.html"
         <td>theme's highlight color radial gradient background</td>
        </tr>
        <tr>
-        <td><code>.bg-stanout-radialgradient</code></td>
-        <td>theme's stanout color radial gradient background</td>
+        <td><code>.bg-standout-radialgradient</code></td>
+        <td>theme's standout color radial gradient background</td>
        </tr>
        <tr>
         <td><code>.bg-secondary-radialgradient</code></td>
@@ -503,46 +503,46 @@ permalink: "get-started/css-classes-shortcuts/utility-css-classes.html"
       <tbody>
        <tr>
         <td><code>.pos-rel</code></td>
-        <td>position relative</td>
+        <td>Relative position</td>
        </tr>
        <tr>
         <td><code>.pos-abs</code></td>
-        <td>position absolute</td>
+        <td>Absolute position</td>
        </tr>
        <tr>
         <td><code>.pos-stc</code></td>
-        <td>position static</td>
+        <td>Static position</td>
        </tr>
        <tr>
         <td><code>.pos-fix</code></td>
-        <td>position fixed</td>
+        <td>Fixed position</td>
        </tr>
 
        <tr>
         <td><code>.relative-centered</code></td>
-        <td>center relatively positioned item vertically and horizontally</td>
+        <td>Centers a relatively positioned item (both vertically and horizontally)</td>
        </tr>
        <tr>
         <td><code>.relative-centered-x</code></td>
-        <td>center relatively positioned item horizontally</td>
+        <td>Centers a relatively positioned item (horizontally)</td>
        </tr>
        <tr>
         <td><code>.relative-centered-y</code></td>
-        <td>center relatively positioned item vertically</td>
+        <td>Centers a relatively positioned item (vertically)</td>
        </tr>
        <tr>
         <td><code>.absolute-centered</code></td>
-        <td>center absolute positioned item vertically and horizontally</td>
+        <td>Centers an absolute-positioned item (both vertically and horizontally)</td>
        </tr>
 
        <tr>
         <td><code>.absolute-centered-x</code></td>
-        <td>center absolute positioned item horizontally</td>
+        <td>Centers an absolute-positioned item (horizontally)</td>
        </tr>
 
        <tr>
         <td><code>.absolute-centered-y</code></td>
-        <td>center absolute positioned item vertically</td>
+        <td>Centers an absolute-positioned item (vertically)</td>
        </tr>
 
 
@@ -1605,19 +1605,19 @@ permalink: "get-started/css-classes-shortcuts/utility-css-classes.html"
 
        <tr>
         <td><code>.no-underline</code></td>
-        <td>no underline text decoration propery</td>
+        <td>no underline text decoration property</td>
        </tr>
        <tr>
         <td><code>.underline</code></td>
-        <td>underline text decoration propery</td>
+        <td>underline text decoration property</td>
        </tr>
        <tr>
         <td><code>.underline-hover</code></td>
-        <td>underline text decoration propery on hover and on focus</td>
+        <td>underline text decoration property on hover and on focus</td>
        </tr>
        <tr>
         <td><code>.underline-focus</code></td>
-        <td>underline text decoration propery on focus</td>
+        <td>underline text decoration property on focus</td>
        </tr>
        <tr>
         <td><code>.underline-text-color</code></td>
@@ -1690,7 +1690,7 @@ permalink: "get-started/css-classes-shortcuts/utility-css-classes.html"
        </tr>
        <tr>
         <td><code>.outline-block-offset</code></td>
-        <td>2px solid blue outline on focus with outline offcet -2px and display block
+        <td>2px solid blue outline on focus with outline offset -2px and display block
          properties</td>
        </tr>
        <tr>
@@ -1705,7 +1705,7 @@ permalink: "get-started/css-classes-shortcuts/utility-css-classes.html"
 
   <cagov-accordion>
    <details>
-    <summary>Transitions and Transforms</summary>
+    <summary>Transitions and transforms</summary>
     <div class="accordion-body">
      <table class="table table-striped">
       <thead>
