Added on this page navigation on all pages #831

--- a/pages/components.html
+++ b/pages/components.html
@@ -7,6 +7,16 @@ permalink: "components.html"
 
 
 <h1 class="mt-lg-0">Components</h1>
+
+<nav aria-labelledby="page-navigation-label" class="page-navigation">
+ <div id="page-navigation-label" class="label">On this page</div>
+ <ul>
+  <li><a href="#All-Components">All Components</a></li>
+  <li><a href="#CSS-style-shortcuts">CSS style shortcuts</a></li>
+ </ul>
+</nav>
+
+
 <p class="lead">Components are the reusable building blocks of the State Template. </p>
 <p class="lead">When we designed our components, we made sure:</p>
 
@@ -16,7 +26,7 @@ permalink: "components.html"
  <li>To enhance the user experience and needs</li>
 </ul>
 
-<h2>All components</h2>
+<h2 id="All-Components">All components</h2>
 
 <p>Use these components to present information and images.</p>
 
@@ -249,7 +259,7 @@ permalink: "components.html"
    </div>
    <div class="p-a">
     <h3 class="h5 m-t-0">Side navigation</h3>
-    <p class="font-size-16 color-black">Provides a deeper level of navigation for larger websites.</p>
+    <p class="font-size-16 color-black">Allows page-level navigation with anchor links.</p>
    </div>
   </a>
  </div>
@@ -317,7 +327,7 @@ permalink: "components.html"
 
 
 
-<h2>CSS style shortcuts</h2>
+<h2 id="CSS-style-shortcuts">CSS style shortcuts</h2>
 <p>Enhance the design and appeal of your web pages with our <a href="/get-started/css-classes-shortcuts/">CSS style
   shortcuts</a>. Add CSS units to format
  page layout,
