--- a/pages/sample/blockquote.html
+++ b/pages/sample/blockquote.html
@@ -10,6 +10,17 @@ permalink: "components/blockquote.html"
 </style>
 
 <h1 class="mt-lg-0">Blockquote</h1>
+<nav aria-labelledby="page-navigation-label" class="page-navigation">
+ <div id="page-navigation-label" class="label">On this page</div>
+ <ul class="columns-2">
+  <li><a href="#Basic-blockquote">Basic blockquote</a></li>
+  <li><a href="#Blockquote-with-image">Blockquote with image</a></li>
+  <li><a href="#Pull-quote">Pull quote</a></li>
+  <li><a href="#Prominent-blockquote">Prominent blockquote</a></li>
+  <li><a href="#Usage">Usage</a></li>
+  <li><a href="#Accessibility">Accessibility</a></li>
+ </ul>
+</nav>
 <p>A blockquote emphasizes quotes or excerpts related to the page content.</p>
 <p>Blockquote text is styled differently from the main text and is typically used for important quotations.
 </p>
