--- a/pages/sample/card.html
+++ b/pages/sample/card.html
@@ -6,6 +6,17 @@ permalink: "patterns/card.html"
 ---
 
 <h1 class="mt-lg-0">Card</h1>
+
+
+<nav aria-labelledby="page-navigation-label" class="page-navigation">
+ <div id="page-navigation-label" class="label">On this page</div>
+ <ul>
+  <li><a href="#Sample">Sample</a></li>
+  <li><a href="#Usage">Usage</a></li>
+  <li><a href="#Accessibility">Accessibility</a></li>
+ </ul>
+</nav>
+
 <p>A card is a flexible, customizable container for content.
  It displays a snippet of information and can link to more details upon interaction.</p>
 
