--- a/pages/sample/form-elements.html
+++ b/pages/sample/form-elements.html
@@ -29,6 +29,21 @@ permalink: "components/form-elements.html"
 
 
 <h1 class="mt-lg-0">Forms elements</h1>
+
+<nav aria-labelledby="page-navigation-label" class="page-navigation">
+ <div id="page-navigation-label" class="label">On this page</div>
+ <ul class="columns-2">
+  <li><a href="#Label">Label</a></li>
+  <li><a href="#Text-field-or-text-area">Text field or text area</a></li>
+  <li><a href="#Checkbox">Checkbox</a></li>
+  <li><a href="#Radio-button">Radio button</a></li>
+  <li><a href="#Dropdown-menu">Dropdown menu</a></li>
+  <li><a href="#File-input">File input</a></li>
+  <li><a href="#Usage">Usage</a></li>
+  <li><a href="#Accessibility">Accessibility</a></li>
+ </ul>
+</nav>
+
 <p>A form allows visitors to submit information to a server.</p>
 <p>Common form elements include:</p>
 <ul>
