--- a/pages/sample/lists.html
+++ b/pages/sample/lists.html
@@ -8,6 +8,17 @@ permalink: "components/lists.html"
 
 
 <h1 class="mt-lg-0">Lists</h1>
+
+<nav aria-labelledby="page-navigation-label" class="page-navigation">
+ <div id="page-navigation-label" class="label">On this page</div>
+ <ul>
+  <li><a href="#Unordered-list">Unordered list</a></li>
+  <li><a href="#Ordered-list">Ordered list</a></li>
+  <li><a href="#Usage">Usage</a></li>
+  <li><a href="#Accessibility">Accessibility</a></li>
+ </ul>
+</nav>
+
 <p>A list is a vertical grouping of related content. They are typically bulleted or numbered.</p>
 
 <h2 id="Unordered-list">Unordered list</h2>
