--- a/pages/sample/progress-bar.html
+++ b/pages/sample/progress-bar.html
@@ -6,6 +6,16 @@ permalink: "components/progress-bar.html"
 ---
 
 <h1 class="mt-lg-0">Progress bar</h1>
+
+<nav aria-labelledby="page-navigation-label" class="page-navigation">
+ <div id="page-navigation-label" class="label">On this page</div>
+ <ul>
+  <li><a href="#Sample">Sample</a></li>
+  <li><a href="#Usage">Usage</a></li>
+  <li><a href="#Accessibility">Accessibility</a></li>
+ </ul>
+</nav>
+
 <p>The progress bar displays the current status of a multi-step task. It is usually updated continuously as the task
  progresses and shows the level of completeness.</p>
 
