--- a/pages/sample/progress-tracker.html
+++ b/pages/sample/progress-tracker.html
@@ -6,6 +6,18 @@ permalink: "patterns/progress-tracker.html"
 ---
 <h1 class="mt-lg-0 m-b-0">Progress tracker</h1>
 <p class="subtitle">Other names: process indicator, step list</p>
+
+<nav aria-labelledby="page-navigation-label" class="page-navigation">
+ <div id="page-navigation-label" class="label">On this page</div>
+ <ul class="columns-2">
+  <li><a href="#Horizontal-tracker">Horizontal tracker</a></li>
+  <li><a href="#Vertical-tracker">Vertical tracker</a></li>
+  <li><a href="#Step-list">Step list</a></li>
+  <li><a href="#Usage">Usage</a></li>
+  <li><a href="#Accessibility">Accessibility</a></li>
+ </ul>
+</nav>
+
 <p> A progress tracker displays the steps and progress through a journey.</p>
 <p>Use the progress tracker to show:</p>
 <ul>
@@ -14,7 +26,7 @@ permalink: "patterns/progress-tracker.html"
  <li>Chronological steps</li>
 </ul>
 
-<h2 id="horizontal-tracker">Horizontal tracker</h2>
+<h2 id="Horizontal-tracker">Horizontal tracker</h2>
 <div class="tab-group responsive">
  <ul id="tabs1" class="nav nav-tabs" role="tablist">
   <li class="nav-item" role="presentation">
@@ -55,7 +67,7 @@ permalink: "patterns/progress-tracker.html"
  </div>
 </div>
 
-<h2 id="vertical-tracker">Vertical tracker</h2>
+<h2 id="Vertical-tracker">Vertical tracker</h2>
 <div class="tab-group responsive">
  <ul id="tabs2" class="nav nav-tabs" role="tablist">
   <li class="nav-item" role="presentation">
@@ -95,7 +107,7 @@ permalink: "patterns/progress-tracker.html"
  </div>
 </div>
 
-<h2 id="step-list">Step list</h2>
+<h2 id="Step-list">Step list</h2>
 <div class="tab-group responsive">
  <ul id="tabs3" class="nav nav-tabs" role="tablist">
   <li class="nav-item" role="presentation">
