--- a/pages/sample/side-navigation.html
+++ b/pages/sample/side-navigation.html
@@ -8,6 +8,21 @@ permalink: "/components/side-navigation.html"
 
 <h1 class="mt-lg-0 m-b-0">Side navigation</h1>
 <p class="subtitle">Other names: page index</p>
+
+
+<nav aria-labelledby="page-navigation-label" class="page-navigation">
+ <div id="page-navigation-label" class="label">On this page</div>
+ <ul class="columns-2">
+  <li><a href="#Single-level-list">Single-level list</a></li>
+  <li><a href="#Multi-level-list">Multi-level list</a></li>
+  <li><a href="#Accordion-list">Accordion list</a></li>
+  <li><a href="#Scroll-bar">Scroll bar</a></li>
+  <li><a href="#Usage">Usage</a></li>
+  <li><a href="#Accessibility">Accessibility</a></li>
+ </ul>
+</nav>
+
+
 <p>The side navigation menu allows visitors to find related pages within a topic. It provides a deeper level of
  navigation for larger websites. Selecting a side menu item will take the visitor to that page.</p>
 
