--- a/pages/sample/table.html
+++ b/pages/sample/table.html
@@ -6,6 +6,18 @@ permalink: "components/table.html"
 ---
 
 <h1 class="mt-lg-0">Table</h1>
+
+<nav aria-labelledby="page-navigation-label" class="page-navigation">
+ <div id="page-navigation-label" class="label">On this page</div>
+ <ul class="columns-2">
+  <li><a href="#Basic">Basic</a></li>
+  <li><a href="#Shaded">Shaded</a></li>
+  <li><a href="#Zebra">Zebra</a></li>
+  <li><a href="#Usage">Usage</a></li>
+  <li><a href="#Accessibility">Accessibility</a></li>
+ </ul>
+</nav>
+
 <p>A table displays data in rows and columns. </p>
 
 <h2 id="Basic">Basic</h2>
