--- a/pages/sample/tabs.html
+++ b/pages/sample/tabs.html
@@ -8,6 +8,17 @@ permalink: "components/tabs.html"
 
 
 <h1 class="mt-lg-0">Tabs</h1>
+
+<nav aria-labelledby="page-navigation-label" class="page-navigation">
+ <div id="page-navigation-label" class="label">On this page</div>
+ <ul>
+  <li><a href="#Sample">Sample</a></li>
+  <li><a href="#Usage">Usage</a></li>
+  <li><a href="#Accessibility">Accessibility</a></li>
+ </ul>
+</nav>
+
+
 <p>Tabs organize related content into panels and enable visitors to navigate between them. Each panel displays one at a
  time.</p>
 <p>Tabs reduce clutter by forming a unit of related content and fitting more information into a smaller space.</p>
