--- a/pages/sample/accordion.html
+++ b/pages/sample/accordion.html
@@ -7,6 +7,17 @@ permalink: "/components/accordion.html"
 
 
 <h1 class="mt-lg-0">Accordion</h1>
+
+<nav aria-labelledby="page-navigation-label" class="page-navigation">
+ <div id="page-navigation-label" class="label">On this page</div>
+ <ul>
+  <li><a href="#Basic-accordion">Basic accordion</a></li>
+  <li><a href="#Accordion-list">Accordion list</a></li>
+  <li><a href="#Usage">Usage</a></li>
+  <li><a href="#Accessibility">Accessibility</a></li>
+ </ul>
+</nav>
+
 <p>Accordions are expandable sections of content. Each section contains a summary element and more body text when
  opened.</p>
 
