--- a/pages/sample/alert.html
+++ b/pages/sample/alert.html
@@ -8,7 +8,14 @@ permalink: "components/alert.html"
 
 
 <h1 class="mt-lg-0">Alert</h1>
-
+<nav aria-labelledby="page-navigation-label" class="page-navigation">
+ <div id="page-navigation-label" class="label">On this page</div>
+ <ul>
+  <li><a href="#Sample">Sample</a></li>
+  <li><a href="#Usage">Usage</a></li>
+  <li><a href="#Accessibility">Accessibility</a></li>
+ </ul>
+</nav>
 
 <p>The alert is for important, sometimes time-sensitive
  information. Reserve alerts for information the audience must read before anything else.</p>
