--- a/pages/sample/button.html
+++ b/pages/sample/button.html
@@ -6,6 +6,16 @@ permalink: "components/button.html"
 ---
 
 <h1 class="mt-lg-0">Button</h1>
+
+<nav aria-labelledby="page-navigation-label" class="page-navigation">
+ <div id="page-navigation-label" class="label">On this page</div>
+ <ul>
+  <li><a href="#Sample">Sample</a></li>
+  <li><a href="#Usage">Usage</a></li>
+  <li><a href="#Accessibility">Accessibility</a></li>
+ </ul>
+</nav>
+
 <p>A button triggers an event or action. It informs the visitor that something will happen next.</p>
 <p>Buttons add visual prominence to the call to action and provide feedback on completed actions.</p>
 <p>Buttons can:</p>
