--- a/pages/sample/card-grid.html
+++ b/pages/sample/card-grid.html
@@ -7,6 +7,18 @@ permalink: "patterns/card-grid.html"
 
 
 <h1 class="mt-lg-0">Card grid</h1>
+
+<nav aria-labelledby="page-navigation-label" class="page-navigation">
+ <div id="page-navigation-label" class="label">On this page</div>
+ <ul class="columns-2">
+  <li><a href="#Basic">Basic</a></li>
+  <li><a href="#News-grid">News grid</a></li>
+  <li><a href="#Imagery">Imagery</a></li>
+  <li><a href="#Usage">Usage</a></li>
+  <li><a href="#Accessibility">Accessibility</a></li>
+ </ul>
+</nav>
+
 <p>There are three types of card grids to present related information: </p>
 <ul>
  <li>Basic card grid</li>
