--- a/pages/sample/countdown-timer.html
+++ b/pages/sample/countdown-timer.html
@@ -29,6 +29,15 @@ permalink: "components/countdown-timer.html"
 
 <h1 class="mt-lg-0">Countdown timer</h1>
 
+<nav aria-labelledby="page-navigation-label" class="page-navigation">
+ <div id="page-navigation-label" class="label">On this page</div>
+ <ul>
+  <li><a href="#Sample">Sample</a></li>
+  <li><a href="#Usage">Usage</a></li>
+  <li><a href="#Accessibility">Accessibility</a></li>
+ </ul>
+</nav>
+
 <p>The countdown timer component helps visitors visualize the counting toward or away from a fixed point in
  time. </p>
 <p>Time intervals displayed by the countdown timer can include:</p>
