--- a/pages/sample/horizontal-separator.html
+++ b/pages/sample/horizontal-separator.html
@@ -6,6 +6,17 @@ permalink: "components/horizontal-separator.html"
 ---
 <h1 class="mt-lg-0 mb-0">Horizontal separator</h1>
 <p class="subtitle">Other names: horizontal rule, divider</p>
+
+
+<nav aria-labelledby="page-navigation-label" class="page-navigation">
+ <div id="page-navigation-label" class="label">On this page</div>
+ <ul>
+  <li><a href="#Sample">Sample</a></li>
+  <li><a href="#Usage">Usage</a></li>
+  <li><a href="#Accessibility">Accessibility</a></li>
+ </ul>
+</nav>
+
 <p>The horizontal separator is a style component that uses a line to separate content into sections.</p>
 
 
