--- a/pages/sample/link-grid.html
+++ b/pages/sample/link-grid.html
@@ -6,6 +6,17 @@ permalink: "patterns/link-grid.html"
 ---
 
 <h1 class="mt-lg-0">Link grid</h1>
+
+<nav aria-labelledby="page-navigation-label" class="page-navigation">
+ <div id="page-navigation-label" class="label">On this page</div>
+ <ul>
+  <li><a href="#Sample">Sample</a></li>
+  <li><a href="#Usage">Usage</a></li>
+  <li><a href="#Accessibility">Accessibility</a></li>
+ </ul>
+</nav>
+
+
 <p>The link grid organizes the frequently used pages or top level calls to action. It guides people to important
  services and topics.</p>
 <p>When viewed on a computer, the grid is a maximum of 3 links wide. On mobile devices, this grid stacks into a single
