--- a/pages/sample/modal.html
+++ b/pages/sample/modal.html
@@ -10,6 +10,18 @@ permalink: "components/modal.html"
 <h1 class="mt-lg-0 m-b-0">Modal</h1>
 <p class="subtitle">Other names: popup window, overlay, dialog</p>
 
+
+<nav aria-labelledby="page-navigation-label" class="page-navigation">
+ <div id="page-navigation-label" class="label">On this page</div>
+ <ul>
+  <li><a href="#How-it-works">How it works</a></li>
+  <li><a href="#Sample">Sample</a></li>
+  <li><a href="#Usage">Usage</a></li>
+  <li><a href="#Accessibility">Accessibility</a></li>
+ </ul>
+</nav>
+
+
 <p>A modal displays content in a temporary window that appears over the current page. </p>
 <p>Modals require an interaction (acknowledge, submit, close) from the visitor before they can return to the content
  underneath.</p>
@@ -27,6 +39,14 @@ permalink: "components/modal.html"
  <li>User feedback</li>
 </ul>
 
+<h2 id="How-it-works">How it works</h2>
+<p>To trigger the modal, you'll need to include a link or a button that will trigger the modal. The trigger button
+ element has two custom data attributes: <code>data-bs-toggle</code> and <code>data-bs-target</code>. The
+ toggle attribute tells framework what to do and the target tells framework which element to open. So,
+ whenever a link button that is clicked, a modal with an ID specified in the <code>data-bs-target</code> attribute will
+ appear.
+
+</p>
 <h2 id="Sample">Sample</h2>
 
 <!--TABS-->
@@ -75,6 +95,11 @@ permalink: "components/modal.html"
    </div>
    <div id="collapse-html1" class="collapse" role="tabpanel" aria-labelledby="heading-html1">
     <div class="card-body">
+     <h3 class="h4 m-t-0">Modal trigger button</h3>
+     <pre><code><button type="button" class="btn btn-default btn-lg m-t-lg" data-bs-toggle="modal"
+      data-bs-target="#news-headlines">Open modal</button></code></pre>
+
+     <h3 class="h4">Modal</h3>
      <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/modal.html" %}</code></pre>
 
     </div>
