--- a/pages/sample/number-counter.html
+++ b/pages/sample/number-counter.html
@@ -7,6 +7,17 @@ permalink: "components/number-counter.html"
 
 <h1 class="mt-lg-0 m-b-0">Number counter</h1>
 <p class="subtitle">Other names: number animation</p>
+
+<nav aria-labelledby="page-navigation-label" class="page-navigation">
+ <div id="page-navigation-label" class="label">On this page</div>
+ <ul>
+  <li><a href="#Sample">Sample</a></li>
+  <li><a href="#Usage">Usage</a></li>
+  <li><a href="#Accessibility">Accessibility</a></li>
+ </ul>
+</nav>
+
+
 <p>The number counter adds animation and counts up to a set number.</p>
 
 
