--- a/pages/sample/parallax.html
+++ b/pages/sample/parallax.html
@@ -9,6 +9,16 @@ permalink: "components/parallax.html"
 
 
 <h1 class="mt-lg-0">Parallax</h1>
+
+<nav aria-labelledby="page-navigation-label" class="page-navigation">
+ <div id="page-navigation-label" class="label">On this page</div>
+ <ul>
+  <li><a href="#Sample">Sample</a></li>
+  <li><a href="#Usage">Usage</a></li>
+  <li><a href="#Accessibility">Accessibility</a></li>
+ </ul>
+</nav>
+
 <p>The parallax is a visual design component. When scrolling, it allows background and foreground elements
  to move at different speeds, creating a 3D effect. </p>
 <h2 id="Sample">Sample</h2>
