--- a/pages/sample/social-media-icons.html
+++ b/pages/sample/social-media-icons.html
@@ -7,6 +7,16 @@ permalink: "components/social-media-icons.html"
 
 
 <h1 class="mt-lg-0">Social media icons</h1>
+
+<nav aria-labelledby="page-navigation-label" class="page-navigation">
+ <div id="page-navigation-label" class="label">On this page</div>
+ <ul>
+  <li><a href="#Sample">Sample</a></li>
+  <li><a href="#Usage">Usage</a></li>
+  <li><a href="#Accessibility">Accessibility</a></li>
+ </ul>
+</nav>
+
 <p>The social media icons component lets you share your agency’s social media pages with visitors.</p>
 <h2 id="Sample">Sample</h2>
 
