download setup page 861

--- a/pages/download-and-setup.html
+++ b/pages/download-and-setup.html
@@ -44,10 +44,10 @@ permalink: "download-and-setup.html"
 
   <div class="p-a-md p-b-lg bg-gray-75">
 
-   <h2 id="Commonlinks" class="h3 mt-0">Common file links</h2>
+   <h2 id="Commonlinks" class="h3 mt-0">Common web template files</h2>
 
-   <div class="flex-container justify-content-between gap-3 font-size-15">
-    <div class="brd-solid-1 brd-gray-light bg-white p-3">
+   <div class="flex-container justify-content-between gap-3 font-size-14">
+    <div class="brd-solid-1 brd-gray-light bg-white p-3 rounded-5">
      <span class="bold"><a
        href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-Website#available-state-web-template-frameworks">Template
        frameworks</a> core code without sample content</span>
@@ -65,7 +65,7 @@ permalink: "download-and-setup.html"
       </li>
      </ul>
     </div>
-    <div class="brd-solid-1 brd-gray-light bg-white p-3">
+    <div class="brd-solid-1 brd-gray-light bg-white p-3 rounded-5">
      <span class="bold">State web template website with all sample content</span>
      <ul class="mt-2 p-l-md">
       <li><a href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-Website/">Github
@@ -74,10 +74,10 @@ permalink: "download-and-setup.html"
         template releases for download</a></li>
      </ul>
     </div>
-    <div class="brd-solid-1 brd-gray-light bg-white p-3">
+    <div class="brd-solid-1 brd-gray-light bg-white p-3 rounded-5">
      <span class="bold">CDN (content delivery network)</span>
      <ul class="mt-2 p-l-md">
-      <li><a href="/cdn.html">CSS/JS core CDN links</a>
+      <li><a href="/cdn.html">V6 CSS/JS core CDN links</a>
       </li>
      </ul>
     </div>
@@ -127,7 +127,7 @@ permalink: "download-and-setup.html"
      <p>You can clone it from our <a
        href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-Website/">Template GitHub
        Repository</a>.</p>
-     <p>Or you can download or access the different frameworks. Review <a href="#Commonlinks">Common
+     <p>You can also download or access the different frameworks. Review <a href="#Commonlinks">Common
        V6 State Web Template file
        links</a>. This is
       also a good time to have your security office perform a scan of the files.</p>
@@ -209,20 +209,20 @@ permalink: "download-and-setup.html"
   <div class="flex-container">
    <div class="brd-solid-1 brd-gray-light p-3">
     <ul class="folder-structure-list">
-     <li class="m-t"><span class="bold">_site</span> - Contains the output files.</li>
-     <li class="m-t"><span class="bold">Pages</span> - The site’s web pages are saved here. These are the pages a
+     <li class="m-t"><span class="bold">_site:</span> Contains the output files.</li>
+     <li class="m-t"><span class="bold">Pages:</span> The site’s web pages are saved here. These are the pages a
       developer or
       content editor can edit.
      </li>
-     <li class="m-t"><span class="bold">src</span> - Source folder. Contains includes, modules, fonts, images, SCSS and
+     <li class="m-t"><span class="bold">src:</span> Source folder. Contains includes, modules, fonts, images, SCSS and
       JavaScript files.</li>
-     <li class="m-t"><span class="bold">Images</span> - Contains all the images used by the website.</li>
-     <li class="m-t"><span class="bold">js</span> - Contains JavaScript files used by the website. Third party
+     <li class="m-t"><span class="bold">Images:</span> Contains all the images used by the website.</li>
+     <li class="m-t"><span class="bold">js:</span> Contains JavaScript files used by the website. Third party
       JavaScript
       libraries are also included in this
       folder.
      </li>
-     <li class="m-t"><span class="bold">_includes</span> - Contains the common template components or code used on some
+     <li class="m-t"><span class="bold">_includes:</span> Contains the common template components or code used on some
       or all
       pages on the website. Examples:
       header, footer, navigation, etc.).
@@ -290,10 +290,9 @@ permalink: "download-and-setup.html"
 
   <pre>node -v</pre>
 
-  <h3>Step 4. Use NPM to run the state web template locally</h3>
+  <p>This should print the version number. If you don’t have Node, you can download it from <a href="https://nodejs.org/">nodejs.org</a> and install it.</p>
 
-  <p>Make sure your local machine has Node installed. To see if Node is installed, open Windows Command Prompt,
-   Powershell or a similar command line tool. Type:</p>
+  <h3>Step 4. Use NPM to run the state web template locally</h3>
 
   <div class="grid-container">
    <div>
