fixed bug #937 and issue #932. Fixed on this page links

--- a/pages/sample/link-grid.html
+++ b/pages/sample/link-grid.html
@@ -75,7 +75,7 @@ permalink: "patterns/link-grid.html"
  </div>
 </div>
 <!--END TABS-->
-<h2 id="usage">Usage</h2>
+<h2 id="Usage">Usage</h2>
 <h3>When and how to use it</h3>
 <p>Use the link grid to highlight the top things people need. Organize the links in a way that makes sense for people’s
  primary needs and lead users to specific content.</p>
