--- a/pages/sample/css-text-accent.html
+++ b/pages/sample/css-text-accent.html
@@ -10,142 +10,145 @@ permalink: "get-started/css-classes-shortcuts/text-accent-colors.html"
       <nav aria-labelledby="color-schemes-list" class="side-navigation sticky-6">
          <ul class="list-navigation">
             <li>
-               <a href="/get-started/css-classes-shortcuts/" id="color-schemes-list">CSS classes shortcuts</a>
-               <ul>
-                  <li>
-                     <a href="/get-started/css-classes-shortcuts/utility-css-classes.html">Utility CSS classes</a>
-                  </li>
-                  <li>
-                     <a href="/get-started/css-classes-shortcuts/gradient-backgrounds.html">Gradient backgrounds</a>
-                  </li>
-                  <li>
-                     <a href="/get-started/css-classes-shortcuts/spacing.html">Spacing</a>
-                  </li>
-                  <li>
-                     <a href="/get-started/css-classes-shortcuts/text-accent-colors.html" class="active">Text accent colors</a>
-                     <ul>
-                        <li>
-                           <a href="#Accent-colors">Accent colors</a>
-                        </li>
-                        <li>
-                           <a href="#Text-highlight">Text highlight</a>
-                        </li>
-                     </ul>
-                  </li>
-               </ul>
+               <a class="landing back" href="/get-started/css-classes-shortcuts/" id="color-schemes-list">CSS classes shortcuts</a>
             </li>
-         </ul>
-      </nav>
-   </div>
+            <li>
+               <a href="/get-started/css-classes-shortcuts/utility-css-classes.html">Utility CSS classes</a>
+            </li>
+            <li>
+               <a href="/get-started/css-classes-shortcuts/spacing.html">Spacing</a>
+            </li>
+            <li>
+               <a href="/get-started/css-classes-shortcuts/gradient-backgrounds.html">Gradient backgrounds</a>
+            </li>
+            <li>
+               <a href="/get-started/css-classes-shortcuts/text-accent-colors.html" class="active">Text accent colors</a>
+            </li>
+         </li>
+      </ul>
+   </nav>
+</div>
 
-   <div class="col-md-9 p-b-lg">
-      <h1 class="mt-lg-0">Text accent colors</h1>
-      <p>Avoid changing text color, especially on regular content. If needed, you can change text color with these classes. This
+<div class="col-md-9 p-b-lg">
+   <h1 class="mt-lg-0">Text accent colors</h1>
+
+   <nav aria-labelledby="page-navigation-label" class="page-navigation">
+      <div id="page-navigation-label" class="label">On this page</div>
+      <ul>
+         <li>
+            <a href="#Accent-colors">Accent colors</a>
+         </li>
+         <li>
+            <a href="#Text-highlight">Text highlight</a>
+         </li>
+      </ul>
+   </nav>
+   <p>Avoid changing text color, especially on regular content. If needed, you can change text color with these classes. This
          may not have enough color contrast and may not be accessible. If you change the text color, check to make sure there is
          enough <a href="https://accessibleweb.com/color-contrast-checker/">color contrast</a>.
       </p>
-      <h2 id="Accent-colors">Accent colors</h2>
+   <h2 id="Accent-colors">Accent colors</h2>
 
-      <!--TABS-->
-      <div class="tab-group responsive">
-         <ul id="tabs1" class="nav nav-tabs" role="tablist">
-            <li class="nav-item" role="presentation">
-               <a id="tab-example1" href="#pane-example1" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
-            </li>
-            <li class="nav-item" role="presentation">
-               <a id="tab-html1" href="#pane-html1" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
-            </li>
-         </ul>
+   <!--TABS-->
+   <div class="tab-group responsive">
+      <ul id="tabs1" class="nav nav-tabs" role="tablist">
+         <li class="nav-item" role="presentation">
+            <a id="tab-example1" href="#pane-example1" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
+         </li>
+         <li class="nav-item" role="presentation">
+            <a id="tab-html1" href="#pane-html1" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
+         </li>
+      </ul>
 
-         <div id="tab-content" class="tab-content">
-            <!--Examples-->
-            <div id="pane-example1" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example1">
-               <div class="card-header" id="heading-example1">
-                  <a data-bs-toggle="collapse" href="#collapse-example1" data-parent="#tab-content" aria-expanded="true"
+      <div id="tab-content" class="tab-content">
+         <!--Examples-->
+         <div id="pane-example1" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example1">
+            <div class="card-header" id="heading-example1">
+               <a data-bs-toggle="collapse" href="#collapse-example1" data-parent="#tab-content" aria-expanded="true"
        aria-controls="collapse-example1" data-hash="#pane-example1" title="Example tab header">
        Example
       </a>
-               </div>
-               <div id="collapse-example1" class="collapse show" role="tabpanel" aria-labelledby="heading-example1">
-                  <div class="p-a-md">
-                     {% include "../../src/_includes/modules/text-accent.html" %}
-                  </div>
+            </div>
+            <div id="collapse-example1" class="collapse show" role="tabpanel" aria-labelledby="heading-example1">
+               <div class="p-a-md">
+                  {% include "../../src/_includes/modules/text-accent.html" %}
                </div>
             </div>
+         </div>
 
-            <!--HTML-->
-            <div id="pane-html1" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html1">
-               <div class="card-header" id="heading-html1">
-                  <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html1" data-parent="#tab-content"
+         <!--HTML-->
+         <div id="pane-html1" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html1">
+            <div class="card-header" id="heading-html1">
+               <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html1" data-parent="#tab-content"
        aria-expanded="false" aria-controls="collapse-html1" data-hash="#pane-html1" title="HTML Source code tab header">
        Source code
       </a>
-               </div>
-               <div id="collapse-html1" class="collapse" role="tabpanel" aria-labelledby="heading-html1">
-                  <div class="card-body">
-                     <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/text-accent.html" %}</code>
+            </div>
+            <div id="collapse-html1" class="collapse" role="tabpanel" aria-labelledby="heading-html1">
+               <div class="card-body">
+                  <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/text-accent.html" %}</code>
                      </pre>
-                  </div>
                </div>
             </div>
-
          </div>
+
       </div>
-      <!--END TABS-->
+   </div>
+   <!--END TABS-->
 
-      <h2 id="Text-highlight">Text highlight</h2>
-      <p>Use this class to highlight a word or text portion.</p>
+   <h2 id="Text-highlight">Text highlight</h2>
+   <p>Use this class to highlight a word or text portion.</p>
 
-      <!--TABS-->
-      <div class="tab-group responsive">
-         <ul id="tabs4" class="nav nav-tabs" role="tablist">
-            <li class="nav-item" role="presentation">
-               <a id="tab-example4" href="#pane-example4" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
-            </li>
-            <li class="nav-item" role="presentation">
-               <a id="tab-html4" href="#pane-html4" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
-            </li>
+   <!--TABS-->
+   <div class="tab-group responsive">
+      <ul id="tabs4" class="nav nav-tabs" role="tablist">
+         <li class="nav-item" role="presentation">
+            <a id="tab-example4" href="#pane-example4" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
+         </li>
+         <li class="nav-item" role="presentation">
+            <a id="tab-html4" href="#pane-html4" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
+         </li>
 
-         </ul>
+      </ul>
 
-         <div id="tab-content" class="tab-content">
-            <!--Examples-->
-            <div id="pane-example4" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example4">
-               <div class="card-header" id="heading-example4">
-                  <a data-bs-toggle="collapse" href="#collapse-example4" data-parent="#tab-content" aria-expanded="true"
+      <div id="tab-content" class="tab-content">
+         <!--Examples-->
+         <div id="pane-example4" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example4">
+            <div class="card-header" id="heading-example4">
+               <a data-bs-toggle="collapse" href="#collapse-example4" data-parent="#tab-content" aria-expanded="true"
        aria-controls="collapse-example4" data-hash="#pane-example4" title="Example tab header">
        Example
       </a>
-               </div>
-               <div id="collapse-example4" class="collapse show" role="tabpanel" aria-labelledby="heading-example4">
-                  <div class="p-a-md">
+            </div>
+            <div id="collapse-example4" class="collapse show" role="tabpanel" aria-labelledby="heading-example4">
+               <div class="p-a-md">
 
-                     {% include "../../src/_includes/modules/text-highlight.html" %}
+                  {% include "../../src/_includes/modules/text-highlight.html" %}
 
-                  </div>
                </div>
             </div>
+         </div>
 
-            <!--HTML-->
-            <div id="pane-html4" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html4">
-               <div class="card-header" id="heading-html4">
-                  <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html4" data-parent="#tab-content"
+         <!--HTML-->
+         <div id="pane-html4" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html4">
+            <div class="card-header" id="heading-html4">
+               <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html4" data-parent="#tab-content"
        aria-expanded="false" aria-controls="collapse-html4" data-hash="#pane-html4" title="HTML Source code tab header">
        Source code
       </a>
-               </div>
-               <div id="collapse-html4" class="collapse" role="tabpanel" aria-labelledby="heading-html4">
-                  <div class="card-body">
-                     <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/text-highlight.html" %}</code>
+            </div>
+            <div id="collapse-html4" class="collapse" role="tabpanel" aria-labelledby="heading-html4">
+               <div class="card-body">
+                  <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/text-highlight.html" %}</code>
    </pre>
 
-                  </div>
                </div>
             </div>
-
          </div>
-      </div>
-      <!--END TABS-->
 
+      </div>
    </div>
+   <!--END TABS-->
+
+</div>
 </div>
