--- a/pages/index.html
+++ b/pages/index.html
@@ -1,6 +1,7 @@
 ---
 title: California State Web Template
 layout: landing.njk
+customcss: /css/custom/homepage.css
 ---
 
 {% include "../src/_includes/modules/header-primary-banner.html" %}
